--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 </head>
 
 <body>
-    <div class="slider-container">
-        <div id="slid-number" class="slide-number"></div>
-        <img src="imgs/01.jpg" alt="Image 01">
-        <img src="imgs/02.jpg" alt="">
-        <img src="imgs/03.jpg" alt="">
-        <img src="imgs/04.jpg" alt="">
-        <img src="imgs/05.jpg" alt="">
-        <img src="imgs/06.jpg" alt="">
-        <img src="imgs/07.jpg" alt="">
-        <img src="imgs/08.jpg" alt="">
-    </div>
-    <div class="slider-controls">
-        <span id="prev" class="prev">Previous</span>
-        <span id="paginations" class="paginations"></span>
-        <span id="next" class="next">Next</span>
+    <div class="container">
+        <div class="slider-container">
+            <div id="slide-number" class="slide-number"></div>
+            <img src="imgs/01.jpg" alt="Image 01">
+            <img src="imgs/02.jpg" alt="">
+            <img src="imgs/03.jpg" alt="">
+            <img src="imgs/04.jpg" alt="">
+            <img src="imgs/05.jpg" alt="">
+            <img src="imgs/06.jpg" alt="">
+            <img src="imgs/07.jpg" alt="">
+            <img src="imgs/08.jpg" alt="">
+        </div>
+        <div class="slider-controls">
+            <span id="prev" class="prev">Previous</span>
+            <span id="paginations" class="paginations"></span>
+            <span id="next" class="next">Next</span>
+        </div>
     </div>
     <script src="js/main.js"></script>
 </body>
